@@ -1,3 +1,11 @@
+20030224
+ - (djm) Tweak gnome-ssh-askpass2:
+   - Retry kb and mouse grab a couple of times, so passphrase dialog doesn't 
+     immediately fail if you are doing something else when it appears (e.g. 
+     dragging a window)
+   - Perform server grab after we have the keyboard and/or pointer to avoid 
+     races.
+
 20030211
  - (djm) Cygwin needs libcrypt too. Patch from vinschen@redhat.com
 
